Takes node-sass back to 4.5.3 to solve watch bug on Ios

--- a/src/scss/base/mixins/_button.scss
+++ b/src/scss/base/mixins/_button.scss
@@ -60,7 +60,7 @@
 @mixin style-button(
         $color, 
         $button-strategy-default : $button-strategy-default,
-        $button-strategy-hover : $button-strategy-hover,  
+        $button-strategy-hover : $button-strategy-hover 
         ) 
     {
     border-radius: $button-border-radius;
@@ -94,7 +94,7 @@
 @mixin style-link-button(
         $color, 
         $button-strategy-default : $button-strategy-default,
-        $button-strategy-hover : $button-strategy-hover,  
+        $button-strategy-hover : $button-strategy-hover
         ) 
     {
     
